; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mp.c_grab_warm_timer_call.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mp.c_grab_warm_timer_call.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cpu_warm_lock = common dso_local global i32 0, align 4
@cpu_warm_call_list = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @grab_warm_timer_call to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @grab_warm_timer_call() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  store i32* null, i32** %2, align 8
  %3 = call i32 (...) @splsched()
  store i32 %3, i32* %1, align 4
  %4 = call i32 @simple_lock(i32* @cpu_warm_lock)
  %5 = call i32 @queue_empty(i32* @cpu_warm_call_list)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %0
  %8 = call i64 @dequeue_head(i32* @cpu_warm_call_list)
  %9 = inttoptr i64 %8 to i32*
  store i32* %9, i32** %2, align 8
  br label %10

10:                                               ; preds = %7, %0
  %11 = call i32 @simple_unlock(i32* @cpu_warm_lock)
  %12 = load i32, i32* %1, align 4
  %13 = call i32 @splx(i32 %12)
  %14 = load i32*, i32** %2, align 8
  ret i32* %14
}

declare dso_local i32 @splsched(...) #1

declare dso_local i32 @simple_lock(i32*) #1

declare dso_local i32 @queue_empty(i32*) #1

declare dso_local i64 @dequeue_head(i32*) #1

declare dso_local i32 @simple_unlock(i32*) #1

declare dso_local i32 @splx(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
